--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@types/matter-js": "^0.20.2",
     "@types/node": "^24.7.2",
+  "@types/jsdom": "^21.1.7",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "@vitest/coverage-v8": "^1.6.0",
