--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run",
+  "test": "vitest run",
+  "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "lint": "eslint \"{src,tests}/**/*.ts\" --max-warnings=0 --no-error-on-unmatched-pattern",
     "lint:fix": "eslint \"{src,tests}/**/*.ts\" --max-warnings=0 --fix --no-error-on-unmatched-pattern",
     "format": "prettier --write \"**/*.{ts,tsx,js,json,md,css,html}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,json,md,css,html}\"",
     "cli:simulate": "node ./dist/cli/index.js",
-    "ci": "pnpm lint && pnpm test --coverage"
+  "ci": "pnpm lint && pnpm test:coverage"
   },
   "dependencies": {
     "matter-js": "^0.20.0",
