--- a/package.json
+++ b/package.json
@@ -8,24 +8,27 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-  "test": "vitest run",
+    "test": "vitest run",
   "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
+  "test:e2e": "playwright test",
     "lint": "eslint \"{src,tests}/**/*.ts\" --max-warnings=0 --no-error-on-unmatched-pattern",
     "lint:fix": "eslint \"{src,tests}/**/*.ts\" --max-warnings=0 --fix --no-error-on-unmatched-pattern",
     "format": "prettier --write \"**/*.{ts,tsx,js,json,md,css,html}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,json,md,css,html}\"",
     "cli:simulate": "node ./dist/cli/index.js",
-  "ci": "pnpm lint && pnpm test:coverage"
+    "simulate:verify": "tsx scripts/ci-simulation.ts",
+    "ci": "pnpm lint && pnpm test:coverage && pnpm simulate:verify"
   },
   "dependencies": {
+    "@pixi/filter-glow": "^5.2.1",
     "matter-js": "^0.20.0",
-  "pixi.js": "^8.14.0",
-  "@pixi/filter-glow": "^5.2.1",
+    "pixi.js": "^8.14.0",
     "tone": "^15.1.22"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.1",
+  "@playwright/test": "^1.49.1",
+  "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@types/jsdom": "^21.1.7",
     "@types/matter-js": "^0.20.2",
@@ -39,6 +42,7 @@
     "eslint-plugin-import": "^2.32.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
+    "tsx": "4.19.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
     "vite": "^7.1.10",
