--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,11 +42,27 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install --with-deps
+
       - name: Run lint
         run: pnpm lint
 
       - name: Run tests
         run: pnpm test:coverage
+
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage
+
+      - name: Run end-to-end tests
+        run: pnpm test:e2e
+
+      - name: Verify deterministic simulation
+        run: pnpm simulate:verify
 
       - name: Build production bundle
         run: pnpm build
